--- a/dnafiber/ui/custom/fiber_ui/frontend/src/style.css
+++ b/dnafiber/ui/custom/fiber_ui/frontend/src/style.css
@@ -20,8 +20,8 @@
 
 .rect-group:hover .hover-paths .fibers {
     opacity: 1.0;
-    stroke-dasharray: 10;
-    stroke-dashoffset: 20;
+    stroke-dasharray: 10, 20;
+    stroke-dashoffset: 60;
     animation: dash 0.5s infinite;
     animation-direction: normal;
     animation-timing-function: linear;
@@ -68,4 +68,16 @@ svg {
     aspect-ratio: 1/1;
     border: solid rgb(97, 97, 97) 2px;
     margin: 1em;
+}
+
+.slider-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+
+}
+
+.slider-container>* {
+    top: 1rem;
 }
